--- a/microsite/faq/logbook.html
+++ b/microsite/faq/logbook.html
@@ -262,6 +262,23 @@
                             </div>
                         </div>
                         <div class=faq-item>
+                            <div class=faq-item-title>
+                                <h2>Week 16</h2>
+                            </div>
+                            <div>
+                                <span>
+                                        <p>
+                                            We changed the map. Taking into account the given critics, we changed how the map 
+                                            displays information by making smaller divisions (hexagons).
+                                            After a meeting with one of our personas we added realized it would be a good idea to show 
+                                            concentration values of the most common/concerning air pollutants.
+                                            We also added an alert system that notifies people when anything possibly hazardous 
+                                            happens (like the temperature being too high).
+                                        </p>
+                                </span>
+                            </div>
+                        </div>
+                        <div class=faq-item>
                                 <div class=faq-item-title>
                                     <h2>Current Global Assessment</h2>
                                 </div>
