--- a/microsite/faq/testvalidation.html
+++ b/microsite/faq/testvalidation.html
@@ -100,6 +100,17 @@
                                         taken place yet, but the group plans on testing the system with all our personas and 
                                         use their feedback to hopeully upgrade our interfaces and project in general.
                                     </span>
+                                    <p style="margin-top: 10px">
+                                        27/05/19            
+                                    </p>
+                                    <span>
+                                        On this date, two members of the group (André Mourato & Gonçalo Vítor) met with one 
+                                        of our personas, an environmental engineering student, Vera Rodrigues. She liked how 
+                                        we chose to show information on the map (in small hexagons). She was also very helpful 
+                                        and thought us what main pollutants people that know about air quality look to know about, 
+                                        the units in which they are measured and common scales for them. With her help we ended up 
+                                        integrating other sources of data to gather information on air pollutants.
+                                    </span>
                                 </div>
                             </div>
                         </div>
