--- a/microsite/faq/specification.html
+++ b/microsite/faq/specification.html
@@ -89,6 +89,8 @@
                                          wind and waste information relative to Aveiro city.
                                     </span>
                                 </div>
+                            </div>
+                            <div class="faq-item">
                                 <div class=faq-item-title>
                                     <h2>Second Demo Stage</h2>
                                 </div>
@@ -98,6 +100,21 @@
                                         big goals. We've made colaborations with both other projects from PEI course as well as external 
                                         projects. We are working on improving our data visualization at the moment and expect to show 
                                         results at the full demo stage.
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="faq-item">
+                                <div class=faq-item-title>
+                                    <h2>Full Demo Stage</h2>
+                                </div>
+                                <div>
+                                    <span>
+                                        We have changed the way the information is displayed on the map by dividing Aveiro's district into 
+                                        smaller pieces (hexagons). After a meeting with one of our personas and also changed what information 
+                                        is displayed on screen. To be specific, we added concentration values of the most common/concerning 
+                                        air pollutants. We also added an alert system that notifies people when anything possibly hazardous 
+                                        happens (like the temperature being too high). The alert system also allows people to configure 
+                                        situations they want to be notified about.
                                     </span>
                                 </div>
                             </div>
