--- a/microsite/faq/developerarea.html
+++ b/microsite/faq/developerarea.html
@@ -46,7 +46,7 @@
                             <a class=dropdown-item href=index.html>Personas & Scenarios</a>
                             <a class=dropdown-item href=../architecture/architecture.html>Architecture</a>
                             <a class=dropdown-item href=logbook.html>LogBook</a>
-                            <a class=dropdown-item href=../architecture/usermanual.pdf>User Manual</a>
+                            <a class=dropdown-item href="https://docs.google.com/document/d/1Ruh9iKpWRdoznX9VcYuc5avBhAAdHKAsLzuRxu-1JPE/edit?usp=sharing">User Manual</a>
                             <a class=dropdown-item href="developerarea.html">Developer Area</a>
                             <a class=dropdown-item href="specification.html">Specification Area</a>
                             <a class=dropdown-item href="testvalidation.html">Test and Validation</a>
@@ -113,15 +113,15 @@
                                             <p style="margin-top: 10px">
                                                 Our broker is built with MQTT. It uses a database in MongoDB to save it's data permanently.
                                                 The sensors and external API's communicate with the broker through an API. The API's documentation 
-                                                is available <a style="text-decoration: underline" href="Data_Layer_API.pdf">here</a>. If you wish to 
-                                                add any data to our system, you can follow that document that details how the requests must be done to 
-                                                interact with our broker, given that you have permission to do so.
+                                                is available <a style="text-decoration: underline" href="https://docs.google.com/document/d/1UHWJFNUr-u8wcfShPDIlYI365aPtD2DPGqO6YyAzIl4/edit?usp=sharing">here</a>. 
+                                                If you wish to add any data to our system, you can follow that document that details how the requests 
+                                                must be done to interact with our broker, given that you have permission to do so.
                                             </p>
                                             <p style="margin-top: 10px">
                                                 The broker communicates with the client side through an entity that handles authentications 
                                                 (supported with JSON Web Tokens). It also has a database in MongoDB to hold users information. 
                                                 The communication with this entity is done through an API which is documented 
-                                                <a style="text-decoration: underline" href="Service_Layer_API.pdf">here</a>. 
+                                                <a style="text-decoration: underline" href="https://docs.google.com/document/d/1VUkXhwd9DdOtAS2NphDEpdI6mPH7Ui_90g25zA9SroQ/edit?usp=sharing">here</a>. 
                                             </p>
                                             <p style="margin-top: 10px">The client interacts with a website built with Nuxt.js and Vue.js.
                                                 The divisions in the map are taken from geojson files. They represent the devices that give us 
