--- a/microsite/faq/testvalidation.html
+++ b/microsite/faq/testvalidation.html
@@ -46,7 +46,7 @@
                             <a class=dropdown-item href=index.html>Personas & Scenarios</a>
                             <a class=dropdown-item href=../architecture/architecture.html>Architecture</a>
                             <a class=dropdown-item href=logbook.html>LogBook</a>
-                            <a class=dropdown-item href=../architecture/usermanual.pdf>User Manual</a>
+                            <a class=dropdown-item href="https://docs.google.com/document/d/1Ruh9iKpWRdoznX9VcYuc5avBhAAdHKAsLzuRxu-1JPE/edit?usp=sharing">User Manual</a>
                             <a class=dropdown-item href="developerarea.html">Developer Area</a>
                             <a class=dropdown-item href="specification.html">Specification Area</a>
                             <a class=dropdown-item href="testvalidation.html">Test and Validation</a>
@@ -80,9 +80,12 @@
                         <div class="block shadow">
                             <div class=faq-item>
                                 <div class=faq-item-title>
-                                    <h2>Chosen Thecnologies</h2>
+                                    <h2>Chosen Technologies</h2>
                                 </div>
                                 <div>
+                                    <p style="margin-top: 10px">
+                                        2/04/19            
+                                    </p>
                                     <span>
                                         For now, the thecnologies chosen by the group have not been an imparement
                                         for the project to move on. The first big functionality was successfully 
@@ -113,6 +116,45 @@
                                     </span>
                                 </div>
                             </div>
+                            <div class=faq-item>
+                                <div class=faq-item-title>
+                                    <h2>Our Standarts</h2>
+                                </div>
+                                <div>
+                                    <span>
+                                        The group worked with an environment engineer to better understand how to evaluate air 
+                                        quality and follows the stadarts set by the <a style="text-decoration: underline" href="http://ec.europa.eu/environment/air/quality/standards.htm">
+                                        European Commission</a> on limits of pollutant gases in the atmosphere.
+                                    </span>
+                                </div>
+                                <div style="margin-top: 10px;">
+                                    <img style="display: block;
+                                                margin-left: auto;
+                                                margin-right: auto;" 
+                                        class=img-fluid width="150" height="150" src="../images/European_Commission.png" alt="">
+                                </div>
+                            </div>
+                            <div class=faq-item-title>
+                                    <h2>Our Data</h2>
+                                </div>
+                                <div>
+                                    <span>
+                                        The group gathers data from real sensors that where integrated in our project through 
+                                        partnerships with other projects, from PEI course and IT. But the ammount of sensors aquired 
+                                        is limited. To show the power of our product we need as much data as possible. Having hundreds, maybe 
+                                        thousands of devices is something that requires costs we can't support on our own. To overcome 
+                                        this problem the group decided to gather data from two external API's, <a style="text-decoration: underline" href="https://darksky.net/dev">Dark Sky</a> 
+                                        and <a  style="text-decoration: underline"href="https://breezometer.com/products/air-quality-api">BreezoMeter</a>, 
+                                        from which we can retrieve a larger ammount of data and display our platform's potential.
+                                    </span>
+                                </div>
+                                <div style="margin-top: 10px;
+                                            display: flex;
+                                            justify-content: center;
+                                            align-items: center;">
+                                    <img class=img-fluid width="150" height="150" src="../images/darksky.png" alt="">
+                                    <img class=img-fluid width="150" height="150" src="../images/breezometer.png" alt="">
+                                </div>
                         </div>
                     </div>
                 </div>
