--- a/microsite/faq/specification.html
+++ b/microsite/faq/specification.html
@@ -46,7 +46,7 @@
                             <a class=dropdown-item href=index.html>Personas & Scenarios</a>
                             <a class=dropdown-item href=../architecture/architecture.html>Architecture</a>
                             <a class=dropdown-item href=logbook.html>LogBook</a>
-                            <a class=dropdown-item href=../architecture/usermanual.pdf>User Manual</a>
+                            <a class=dropdown-item href="https://docs.google.com/document/d/1Ruh9iKpWRdoznX9VcYuc5avBhAAdHKAsLzuRxu-1JPE/edit?usp=sharing">User Manual</a>
                             <a class=dropdown-item href="developerarea.html">Developer Area</a>
                             <a class=dropdown-item href="specification.html">Specification Area</a>
                             <a class=dropdown-item href="testvalidation.html">Test and Validation</a>
