--- a/microsite/index.html
+++ b/microsite/index.html
@@ -46,7 +46,7 @@
                             <a class=dropdown-item href=faq/index.html>Personas & Scenarios</a>
                             <a class=dropdown-item href=architecture/architecture.html>Architecture</a>
                             <a class=dropdown-item href=faq/logbook.html>LogBook</a>
-                            <a class=dropdown-item href=architecture/usermanual.pdf>User Manual</a>
+                            <a class=dropdown-item href="https://docs.google.com/document/d/1Ruh9iKpWRdoznX9VcYuc5avBhAAdHKAsLzuRxu-1JPE/edit?usp=sharing">User Manual</a>
                             <a class=dropdown-item href="faq/developerarea.html">Developer Area</a>
                             <a class=dropdown-item href="faq/specification.html">Specification Area</a>
                             <a class=dropdown-item href="faq/testvalidation.html">Test and Validation</a>
@@ -86,8 +86,11 @@
                 <div class="col-lg-6 mr-auto align-self-center">
                     <div class=feature-content>
                         <h2>Discover Environment</h2>
-                        <p class=desc>CityZoom is a platform that allows users to have access to the environmental aspects of a city.
-                            Information such as a city's temperature, humidity, CO2 levels, UV radiation and more are available to the user who can also compare these aspects between different cities.                        </p>
+                        <p class=desc>
+                            CityZoom is a platform that allows users to have access to the environmental aspects of a city.
+                            Information such as a city's temperature, humidity, air pressure and concentration of pollutant gases are 
+                            available to the user.
+                        </p>
                     </div>
                     <!--
                     <div class=testimonial>
@@ -132,7 +135,7 @@
                 <div class=col-lg-12>
                     <div class=section-title>
                         <h2>Know Your City</h2>
-                        <p>Know everything you need to know about your city with CityZoom.</p>
+                        <p>Know everything you need about your city with CityZoom.</p>
                     </div>
                 </div>
             </div>
@@ -151,14 +154,14 @@
                             </div>
                             <div class="col-md-6 col-xs-12">
                                 <div class=service-item><i class=tf-puzzle></i>
-                                    <h3>Data Sharing</h3>
-                                    <p>Compare the environmental aspects between different cities!</p>
+                                    <h3>Environmental Control</h3>
+                                    <p>Check how eco-friendly your city is and how much that may be having an impact in your life!</p>
                                 </div>
                             </div>
                             <div class="col-md-6 col-xs-12">
                                 <div class=service-item><i class=tf-bargraph></i>
-                                    <h3>Environmental Control</h3>
-                                    <p>Check how eco-friendly your city is and how much that may be having an impact in your life!</p>
+                                    <h3>Alarming You</h3>
+                                    <p>Set alarms to be notified if anything hazrdous happens.</p>
                                 </div>
                             </div>
                             <div class="col-md-6 col-xs-12">
