--- a/microsite/index.html
+++ b/microsite/index.html
@@ -194,8 +194,9 @@
             <div class=row>
                 <div class=col-lg-12>
                     <div class=content-block>
-                        <h2>Watch Our Promo Video</h2>
-                        <p>Soon</p><a data-fancybox href="#"><i class="tf-ion-play video"></i></a></div>
+                            <iframe width="420" height="315"
+                            src="https://www.youtube.com/watch?v=JFW05t47fhE">
+                            </iframe>
                 </div>
             </div>
         </div>
