fixed a hardcoded-generated bug

--- a/microsite/team/index.html
+++ b/microsite/team/index.html
@@ -46,7 +46,7 @@
                                 <a class=dropdown-item href=../faq/index.html>Personas & Scenarios</a>
                                 <a class=dropdown-item href=../architecture/architecture.html>Architecture</a>
                                 <a class=dropdown-item href=../faq/logbook.html>LogBook</a>
-                                <a class=dropdown-item href="https://docs.google.com/document/d/1Ruh9iKpWRdoznX9VcYuc5avBhAAdHKAsLzuRxu-1JPE/edit?usp=sharing">User Manual</a>
+                                <a class=dropdown-item href="../faq/userManual.html">User Manual</a>
                                 <a class=dropdown-item href="../faq/developerarea.html">Developer Area</a>
                                 <a class=dropdown-item href="../faq/specification.html">Specification Area</a>
                                 <a class=dropdown-item href="../faq/testvalidation.html">Test and Validation</a>
