video in microsite

--- a/microsite/index.html
+++ b/microsite/index.html
@@ -189,14 +189,15 @@
             </div>
         </div>
     </section>
-    <section class="video-promo section bg-1" style=background-image:url(images/background/promo-video-back.webp),url(http://demo.themefisher.com/small-apps-hugo/images/background/promo-video-back.jpg)>
-        <div class=container>
+    <section style=background-image:url(images/background/promo-video-back.webp),url(http://demo.themefisher.com/small-apps-hugo/images/background/promo-video-back.jpg)>
+        <div style="height:100%;width:100%;";>
             <div class=row>
                 <div class=col-lg-12>
-                    <div class=content-block>
-                            <iframe width="420" height="315"
-                            src="https://www.youtube.com/watch?v=JFW05t47fhE">
-                            </iframe>
+                    <div style="height: 35rem;pointer-events: none">
+                        <video playinine autoplay loop muted style="min-height:100%;min-width:100%;position:absolute">
+                            <source src="videos/WHO Breathe Life Clean Air, Healthy Future.mp4">
+                        </video>
+                    </div>
                 </div>
             </div>
         </div>
@@ -252,7 +253,7 @@
     </section>
     -->
     <footer class=footer-main>
-        <div class=container>
+        <div class=container style="padding-top:10rem;">
             <div class=row>
                 <div class="col-12 text-center">
                     <div class=block>
