--- a/microsite/faq/userManual.html
+++ b/microsite/faq/userManual.html
@@ -107,7 +107,7 @@
                                             <li>Check all sensors' streams values in real-time;</li>
                                             <li>Check the location of all the sensors in a map in real-time;</li>
                                             <li>Heatmap vision of every stream in hexagon and parish;</li>
-                                            <li>View data snapashots from previous moments;</li>
+                                            <li>View data snapshots from previous moments;</li>
                                         </ul>
                                         <br>
                                         &emsp;For the sensor technician, the platform has the following features:
