added images, missing alerts screenshots

--- a/microsite/faq/userManual.html
+++ b/microsite/faq/userManual.html
@@ -174,11 +174,11 @@
                                             When it stops, the state will be <i>inactive</i>. If the user wants to dismiss the alert notification, he can do it and it will no longer be in the "Triggered alerts".
                                             <br><br>
                                             &emsp;On the left sidebar, we can access different pages of the web portal.
-                                            <br><br><div class="h-caption"><a href="#" class="pop" data-title="Main dashboard page" data-desc=""><img id="Main_Dashboard_Page" data-toggle="modal" data-target="#myModal" src="../images/views/dashboard.png" alt="Main Dashboard Page"></a><br>
+                                            <br><br><div class="h-caption"><a href="#" class="pop" data-title="Main dashboard page" data-desc=""><img width="100%" id="Main_Dashboard_Page" data-toggle="modal" data-target="#myModal" src="../images/views/dashboard.png" alt="Main Dashboard Page"></a><br>
                                                 <h6 style="text-align: center">Main dashboard page</h6></div><br>
                                             &emsp;The map view contains a map with the location of all the sensors of the user, with a filter to select the streams that are visible on the map. 
                                             When the user clicks on top of a sensor, it will appear a popup box with information about that sensor and the streams of that sensor . 
-                                            <br><br><div class="h-caption"><a href="#" class="pop" data-title="Map page" data-desc=""><img id="Map" data-toggle="modal" data-target="#myModal" src="../images/views/map.png" alt="Map vision"></a><br>
+                                            <br><br><div class="h-caption"><a href="#" class="pop" data-title="Map page" data-desc=""><img width="100%" id="Map" data-toggle="modal" data-target="#myModal" src="../images/site1.png" alt="Map vision"></a><br>
                                                 <h6 style="text-align: center">Map with some sensors for that user</h6>
                                             </div><br>
                                             &emsp;The alerts page contains every configured and triggered alerts of all the sensors allowed to that user, with a filter to select the sensor types that are visible on the page. It has the information divided in tabs: "Configured" and "Triggered". It shows the most relevant information about each configured or triggered alert, being possible to have more information about the specific alert by clicking on the name of the alert. In the tab “Configured” it is possible to create an alert by clicking on the button “Add alert” and filling the popup form. To add an actuator, there is a button “Add actuator”. In the tab “Triggered”, all triggered alerts are displayed by date and it is also possible to delete them. 
@@ -197,7 +197,7 @@
                                         <h3 align="left">Mobile application</h3>
                                         <p>
                                             &emsp;On the initial view of the mobile application, the user can see a dashboard with seven cards, one for each type of sensor. Each card will have the values gathered from the sensor that is currently closer to the user in real-time. On the top right corner the user can select which cards are visible, or select them all.
-                                            <br><br><div class="h-caption"><a href="#" class="pop" data-title="Dashboard view" data-desc=""><img class="mockups-app-img-mm" id="mobile_dash_view" data-toggle="modal" data-target="#myModal2" src="../images/views/mobileApp.png" alt="Dashboard view"></a><br><h6 style="text-align: center">Mobile App view</h6></div><br>
+                                            <br><br><div align="center" class="h-caption"><a href="#" class="pop" data-title="Dashboard view" ><img width="50%" class="mockups-app-img-mm" id="mobile_dash_view" data-toggle="modal" data-target="#myModal2" src="../images/views/mobileApp.jpg" alt="Dashboard view"></a><br><h6 style="text-align: center">Mobile App view</h6></div><br>
                                                                 
                                         </p>
                                         <h3 align="left">APIs available for the sensors </h32>
