--- a/microsite/index.html
+++ b/microsite/index.html
@@ -189,12 +189,12 @@
             </div>
         </div>
     </section>
-    <section style=background-image:url(images/background/promo-video-back.webp),url(http://demo.themefisher.com/small-apps-hugo/images/background/promo-video-back.jpg)>
+    <section style="background-color: #1a1b1f;">
         <div style="height:100%;width:100%;";>
             <div class=row>
                 <div class=col-lg-12>
-                    <div style="height: 35rem;pointer-events: none">
-                        <video playinine autoplay loop muted style="min-height:100%;min-width:100%;position:absolute">
+                    <div style="pointer-events: none;">
+                        <video playinine autoplay loop muted  style="min-width: 100%;">
                             <source src="videos/WHO Breathe Life Clean Air, Healthy Future.mp4">
                         </video>
                     </div>
@@ -253,7 +253,7 @@
     </section>
     -->
     <footer class=footer-main>
-        <div class=container style="padding-top:10rem;">
+        <div class=container>
             <div class=row>
                 <div class="col-12 text-center">
                     <div class=block>
