--- a/microsite/index.html
+++ b/microsite/index.html
@@ -81,7 +81,7 @@
         <div class=container>
             <div class=row>
                 <div class="col-lg-6 ml-auto justify-content-center">
-                    <div class=image-content width="500" height="500" data-aos=fade-right><img class=img-fluid width="500" height="500" src=images/site1.png onerror="this.src='index.html\/\/demo.themefisher.com\/small-apps-hugo\/images\/feature\/feature-new-01.jpg'" alt=iphone></div>
+                    <div class=image-content width="500" height="500" data-aos=fade-right><img class=img-fluid width="500" height="500" src=images/dashboard.png onerror="this.src='index.html\/\/demo.themefisher.com\/small-apps-hugo\/images\/feature\/feature-new-01.jpg'" alt=iphone></div>
                 </div>
                 <div class="col-lg-6 mr-auto align-self-center">
                     <div class=feature-content>
